--- a/src/main/resources/static/template/man/ManList.html
+++ b/src/main/resources/static/template/man/ManList.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>man</title>
 </head>
 <body>
 <h1>这里是man首页</h1>
+<table>
+    <tr>
+        <th>姓名</th>
+        <th>资金</th>
+    </tr>
+    <tr th:each="man : ${manList}">
+        <td th:text="${man.name}">姓名</td>
+        <td th:text="${man.money}">资金</td>
+    </tr>
+</table>
 </body>
 </html>
